Service, repositorie, domain e migrations

--- a/src/Vaquinha.API/appsettings.json
+++ b/src/Vaquinha.API/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConfiguracoesGeralAplicacao": {
+    "MetaCampanha": 30000,
+    "DataFimCampanha": "2020-07-31T00:00:00",
+    "Polly": {
+      "QuantidadeRetry": 3,
+      "TempoDeEsperaEmSegundos": 2
+    }
+  }
 }
