--- a/src/Vaquinha.API/appsettings.Development.json
+++ b/src/Vaquinha.API/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost, 1433;Initial Catalog=vaquinha;User Id=sa;Password=V4qu1nh4"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConfiguracoesGeralAplicacao": {
+    "MetaCampanha": 100000,
+    "DataFimCampanha": "2020-10-01T00:00:00",
+    "Polly": {
+      "QuantidadeRetry": 3,
+      "TempoDeEsperaEmSegundos": 2
     }
   }
 }
